--- a/CSE-3311 Project/style-form.css
+++ b/CSE-3311 Project/style-form.css
@@ -46,6 +46,80 @@ input[type="submit"]:hover {
   background-color: #f2f2f2;
   padding: 20px;
 }
+.UserCreator {
+  position: fixed;
+  width: 0%;
+  top: 30%;
+  left: 45%;
+  right: 50%;
+  bottom: 0;
+  border-radius: 2px;
+  border-color: 3px solid #f1f1f1;
+  background-color: #04aa6d;
+  padding: 0px;
+  z-index: 9;
+}
+
+.popForm {
+  display: table;
+  background-color: rgba(4, 170, 109, 0.8);
+  position: fixed;
+  left: 30%;
+  top: 10%;
+  right: 15%;
+  width: 50%;
+  border: 3px solid #f1f1f1;
+  z-index: 9;
+}
+
+.conForm .CU-btn {
+  display: table-cell;
+  background-color: #f1f1f1;
+  color: black;
+  padding: 16px 20px;
+  border: 1px solid white;
+  cursor: pointer;
+  width: 100% inherit;
+  margin-bottom: 10px;
+  opacity: 1;
+}
+
+.myLabel {
+  display: table-row;
+  padding: 16px 20px;
+  margin-left: 10px inherit;
+  opacity: 1;
+}
+
+.myInput {
+  display: table-cell;
+  padding: 16px 20px;
+  margin-left: 10px inherit;
+  opacity: 1;
+}
+
+.conForm input[type="text"],
+.conForm input[type="password"] {
+  width: 50%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border: none;
+  background: #f1f1f1;
+}
+
+.conForm input[type="text"]:focus,
+.conForm input[type="password"]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+.conForm .cancel {
+  background-color: red;
+}
+
+.conForm .btn:hover {
+  opacity: 1;
+}
 
 .Form {
   position: relative;
