--- a/CSE-3311 Project/style-form.css
+++ b/CSE-3311 Project/style-form.css
@@ -1,15 +1,139 @@
 body {
-  background-color: #333;
-  background-image: url("wall-paint.jpg");
+  background-color: rgb(229, 239, 243);
+  /* background-image: url("wall-paint.jpg"); */
   height: 500px; /* You must set a specified height */
   background-position: center; /* Center the image */
   background-repeat: repeat; /* Do not repeat the image */
   background-size: cover; /* Resize the background image to cover the entire container */
+  font-size: 16px;
+  font: "Arial";
 }
+
+input,
+button {
+  font-family: "Nunito", sans-serif;
+  font-weight: 700;
+}
+
+.main,
+.loggedin {
+  width: 20%;
+  margin: 0% auto;
+  margin-top: 200px;
+  padding: 20px;
+  display: none;
+}
+
+.main input {
+  display: block;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background: #fff;
+  padding: 15px;
+  outline: none;
+  width: 100%;
+  margin-bottom: 20px;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+}
+.main input:focus {
+  border: 1px solid #999;
+}
+
+.main button,
+.loggedin button {
+  background: #5d8ffc;
+  color: #fff;
+  border: 1px solid #5d8ffc;
+  border-radius: 5px;
+  padding: 15px;
+  display: block;
+  width: 90%;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+}
+
+.main button:hover,
+.loggedin button:hover {
+  background: #fff;
+  color: #5d8ffc;
+  border: 1px solid #5d8ffc;
+  cursor: pointer;
+}
+
+.signup {
+  width: 20%;
+  margin: 0% auto;
+  margin-top: 0px;
+  padding: 20px;
+  display: none;
+  background: #5d8ffc;
+  color: #fff;
+  border: 1px solid #5d8ffc;
+  border-radius: 5px;
+  padding: 15px;
+  display: block;
+  width: 200px;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+}
+
+.signup:hover {
+  background: #fff;
+  color: #5d8ffc;
+  border: 1px solid #5d8ffc;
+  cursor: pointer;
+}
+
+.main_signup input {
+  display: block;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background: #fff;
+  padding: 15px;
+  outline: none;
+  width: 100%;
+  margin-bottom: 20px;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+}
+
+.main_signup input:focus {
+  border: 1px solid #999;
+}
+
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgba(0, 0, 0); /* Black w/ opacity */
+  background-color: rgba(0, 0, 0, 0.5); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  border-radius: 25px;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 500px;
+}
+
 input[type="text"],
-select,
-textarea {
-  width: 70%; /* Full width */
+input[type="email"],
+input[type="password"] {
+  width: 100%; /* Full width */
   padding: 12px; /* Some padding */
   border: 1px solid #ccc; /* Gray border */
   border-radius: 4px; /* Rounded borders */
@@ -19,122 +143,51 @@ textarea {
   resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
 }
 
-/* Style the submit button with a specific background color etc */
-input[type="submit"] {
-  position: relative;
-  left: 40%;
-  background-color: #04aa6d;
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-/* When moving the mouse over the submit button, add a darker green color */
-input[type="submit"]:hover {
-  background-color: #45a049;
-}
-
-/* Add a background color and some padding around the form */
 .container {
   position: relative;
   width: 500px;
   top: 20px;
-  left: 28%;
+  top: -15px;
+  left: -20px;
   border-radius: 5px;
   background-color: #f2f2f2;
   padding: 20px;
 }
-.UserCreator {
-  position: fixed;
-  width: 0%;
-  top: 30%;
-  left: 45%;
-  right: 50%;
-  bottom: 0;
-  border-radius: 2px;
-  border-color: 3px solid #f1f1f1;
-  background-color: #04aa6d;
-  padding: 0px;
-  z-index: 9;
-}
 
-.popForm {
-  display: table;
-  background-color: rgba(4, 170, 109, 0.8);
-  position: fixed;
-  left: 30%;
-  top: 10%;
-  right: 15%;
-  width: 50%;
-  border: 3px solid #f1f1f1;
-  z-index: 9;
-}
-
-.conForm .CU-btn {
-  display: table-cell;
-  background-color: #f1f1f1;
-  color: black;
-  padding: 16px 20px;
-  border: 1px solid white;
-  cursor: pointer;
-  width: 100% inherit;
-  margin-bottom: 10px;
-  opacity: 1;
-}
-
-.myLabel {
-  display: table-row;
-  padding: 16px 20px;
-  margin-left: 10px inherit;
-  opacity: 1;
-}
-
-.myInput {
-  display: table-cell;
-  padding: 16px 20px;
-  margin-left: 10px inherit;
-  opacity: 1;
-}
-
-.conForm input[type="text"],
-.conForm input[type="password"] {
-  width: 50%;
-  padding: 15px;
-  margin: 5px 0 22px 0;
-  border: none;
-  background: #f1f1f1;
-}
-
-.conForm input[type="text"]:focus,
-.conForm input[type="password"]:focus {
-  background-color: #ddd;
-  outline: none;
-}
-
-.conForm .cancel {
-  background-color: red;
-}
-
-.conForm .btn:hover {
-  opacity: 1;
-}
-
+/* location of the form title in the middle top */
 .Form {
   position: relative;
-  left: 40%;
+  left: 35%;
 }
 
-.alert {
-  width: 40%;
-  position: relative;
-  left: 30%;
-  background-color: #0c9965;
-  padding: 5px 5px;
-  border-radius: 5px;
-  text-align: center;
-  color: white;
+.close {
+  color: grey;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+/* Hover over the close button */
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.heading {
+  /* font-family: "Nunito", sans-serif; */
+  color: #4979e0;
+  font-size: 50px;
+  position: absolute;
+  top: -20px;
+  right: 575px;
+  font-family: Arial, sans-serif;
+}
+
+.para {
+  font-family: "Nunito", sans-serif;
   font-size: 20px;
-  display: none;
+  position: absolute;
+  top: 125px;
 }
