--- a/CSE-3311 Project/style.css
+++ b/CSE-3311 Project/style.css
@@ -1,7 +1,7 @@
 /* Body of the page with a background picture */
 body {
-  background-color: rgb(0, 0, 0);
-  background-image: url("wall-paint.jpg");
+  background-color: rgb(229, 239, 243);
+  /* background-image: url("wall-paint.jpg"); */
   height: 500px; /* You must set a specified height */
   background-position: center; /* Center the image */
   background-repeat: repeat; /* Do not repeat the image */
@@ -54,7 +54,7 @@ body {
 .AddProject {
   position: relative;
   left: 81%;
-  background-color: #4caf50;
+  background-color: #5d8ffc;
   color: white;
   padding: 16px;
   font-size: 16px;
@@ -68,16 +68,33 @@ body {
   background-color: #f1f1f1;
 }
 
+.logout {
+  position: relative;
+  left: 50%;
+  background-color: #5d8ffc;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+/* hover for addbutton */
+.logout a:hover {
+  display: block;
+  background-color: rgb(70, 107, 161);
+}
+
 /* This is the for the top navigation button */
 /*background color for the navigation bar */
 .topnav {
-  border-radius: 10px;
-  background-color: #333;
+  border: 100%;
+  background-color: #5d8ffc;
   overflow: hidden;
 }
 
 /* Style for Picasso at the top left will add home page function later */
-.topnav a {
+.topnav button {
   float: left;
   color: #f2f2f2;
   text-align: center;
@@ -86,27 +103,28 @@ body {
 }
 
 /* hover for Picasso*/
-.topnav a:hover {
+.topnav button:hover {
   background-color: #ddd;
-  color: black;
+  color: #5d8ffc;
 }
 
 /* also gives picasso style */
-.topnav a.active {
-  background-color: #04aa6d;
-  color: white;
+.topnav button.active {
+  background-color: #5d8ffc;
 }
 
 /* Style for the dropdown button*/
 .dropbtn {
-  background-color: #4caf50;
+  background-color: #5d8ffc;
   color: white;
   padding: 16px;
   font-size: 16px;
   border: none;
   cursor: pointer;
 }
-
+.dropbtn a:hover {
+  color: white;
+}
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
   position: absolute;
@@ -118,8 +136,9 @@ body {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #201f1f;
+  background-color: rgb(15, 65, 112);
   min-width: 100px;
+  top: 100px;
   z-index: 1;
 }
 
@@ -143,7 +162,7 @@ body {
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
-  background-color: #3e8e41;
+  background-color: rgb(70, 107, 161);
 }
 
 /* style for addbutton */
@@ -197,6 +216,7 @@ body {
 /* This is where the form starts */
 /* style for Text area */
 input[type="text"],
+input[type="number"],
 select,
 textarea {
   width: 70%; /* Full width */
@@ -310,6 +330,7 @@ button:hover {
   position: absolute;
   top: 62%;
   left: 0%;
+  background-color: #3e8e41;
   transform: translate(0%, -50%);
 }
 
@@ -356,5 +377,5 @@ td {
   background-color: #3e8e41;
 }
 .seeMore:hover {
-  background-color: white;
+  background-color: #bbb;
 }
