Changed password input functionality, added a new step for value input

--- a/CSE-3311 Project/style-form.css
+++ b/CSE-3311 Project/style-form.css
@@ -204,3 +204,9 @@ input[type="password"] {
   position: absolute;
   top: 125px;
 }
+
+.passMIN{
+  font-family: "Nunito", sans-serif;
+  font-size: 12px;
+  opacity: 0.6;
+}
