--- a/CSE-3311 Project/style.css
+++ b/CSE-3311 Project/style.css
@@ -1,7 +1,7 @@
 /* Body of the page with a background picture */
 body {
-  background-color: rgb(0, 0, 0);
-  background-image: url("wall-paint.jpg");
+  background-color: rgb(230, 230, 230);
+  /* background-image: url("wall-paint.jpg"); */
   height: 500px; /* You must set a specified height */
   background-position: center; /* Center the image */
   background-repeat: repeat; /* Do not repeat the image */
@@ -54,7 +54,7 @@ body {
 .AddProject {
   position: relative;
   left: 81%;
-  background-color: #4caf50;
+  background-color: #5d8ffc;
   color: white;
   padding: 16px;
   font-size: 16px;
@@ -63,21 +63,37 @@ body {
 }
 
 /* hover for addbutton */
-.AddProject a:hover {
+.AddProject:hover {
   display: block;
-  background-color: #f1f1f1;
+  background-color: rgb(70, 107, 161);
+}
+
+.logout {
+  position: relative;
+  left: 50%;
+  background-color: #5d8ffc;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+/* hover for addbutton */
+.logout:hover {
+  display: block;
+  background-color: rgb(70, 107, 161);
 }
 
 /* This is the for the top navigation button */
 /*background color for the navigation bar */
 .topnav {
-  border-radius: 10px;
-  background-color: #333;
+  background-color: #5d8ffc;
   overflow: hidden;
 }
 
 /* Style for Picasso at the top left will add home page function later */
-.topnav a {
+.topnav button {
   float: left;
   color: #f2f2f2;
   text-align: center;
@@ -86,27 +102,28 @@ body {
 }
 
 /* hover for Picasso*/
-.topnav a:hover {
+.active:hover {
   background-color: #ddd;
-  color: black;
+  color: #fff;
 }
 
 /* also gives picasso style */
-.topnav a.active {
-  background-color: #04aa6d;
-  color: white;
+.topnav button.active {
+  background-color: #5d8ffc;
 }
 
 /* Style for the dropdown button*/
 .dropbtn {
-  background-color: #4caf50;
+  background-color: #5d8ffc;
   color: white;
   padding: 16px;
   font-size: 16px;
   border: none;
   cursor: pointer;
 }
-
+.dropbtn a:hover {
+  color: white;
+}
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
   position: absolute;
@@ -118,8 +135,9 @@ body {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #201f1f;
+  background-color: rgb(15, 65, 112);
   min-width: 100px;
+  top: 50px;
   z-index: 1;
 }
 
@@ -133,7 +151,7 @@ body {
 
 /* Change color of dropdown links on hover */
 .dropdown-content a:hover {
-  background-color: #f1f1f1;
+  background-color: #0d2c66;
 }
 
 /* Show the dropdown menu on hover */
@@ -143,53 +161,53 @@ body {
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
-  background-color: #3e8e41;
-}
-
-/* style for addbutton */
-.AddButton {
-  background-color: #4caf50;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-}
-
-/* hover for addbutton */
-.AddButton a:hover {
-  display: block;
-  background-color: #f1f1f1;
+  background-color: rgb(70, 107, 161);
 }
 
 /* Box with info just to see how it looks */
 .Box1 {
   border-radius: 10px;
-  width: 350px;
-  height: 50px;
+  width: 75px;
+  height: 2%;
   padding: 100px;
-  border: 5px solid rgb(61, 61, 61);
+  /* border: 1px solid rgb(121, 122, 122); */
   position: relative;
-  background-color: rgb(128, 125, 125);
+  background-color: rgb(126, 207, 228);
   overflow: hidden;
+  float: left;
+  margin: 40px;
+  box-shadow: -1px 1px 20px rgb(193, 193, 194);
 }
+
 .Box2 {
   border-radius: 10px;
   width: 350px;
-  height: 200px;
+  height: 170px;
   padding: 100px;
-  border: 5px solid rgb(61, 61, 61);
+  border: 5px solid rgb(160, 158, 158);
   position: relative;
-  background-color: rgb(128, 125, 125);
+  background-color: rgb(167, 164, 161);
+  overflow: hidden;
+}
+
+.Box3 {
+  border-radius: 10px;
+  width: 350px;
+  height: 170px;
+  padding: 100px;
+  border: 5px solid rgb(160, 158, 158);
+  position: relative;
+  background-color: rgb(167, 164, 161);
   overflow: hidden;
 }
 
 /* Position of the box */
 .P1 {
+  width: 75px;
   font-size: 15px;
   font-family: Arial, Helvetica, sans-serif;
   position: relative;
-  color: white;
+  /* background-color: white; */
   right: 20%;
   top: -100px;
 }
@@ -197,6 +215,7 @@ body {
 /* This is where the form starts */
 /* style for Text area */
 input[type="text"],
+input[type="number"],
 select,
 textarea {
   width: 70%; /* Full width */
@@ -212,7 +231,7 @@ textarea {
 /* Style the submit button*/
 input[type="submit"] {
   position: relative;
-  background-color: #04aa6d;
+  background-color: #5d8ffc;
   color: white;
   padding: 12px 20px;
   border: none;
@@ -222,7 +241,7 @@ input[type="submit"] {
 
 /* When moving the mouse over the submit button, add a darker green color */
 input[type="submit"]:hover {
-  background-color: #45a049;
+  background-color: #284d9e;
 }
 
 /* Add a background color and some padding around the form */
@@ -251,7 +270,7 @@ input.invalid {
 }
 button {
   position: relative;
-  background-color: #04aa6d;
+  background-color: #5d8ffc;
   color: white;
   padding: 12px 20px;
   border: none;
@@ -281,14 +300,14 @@ button:hover {
   opacity: 1;
 }
 .step.finish {
-  background-color: #04aa6d;
+  background-color: #5d8ffc;
 }
 
 .alert {
   width: 40%;
   position: relative;
   left: 30%;
-  background-color: #0c9965;
+  background-color: #5d8ffc;
   padding: 5px 5px;
   border-radius: 5px;
   text-align: center;
@@ -308,13 +327,14 @@ button:hover {
 .close1 {
   cursor: pointer;
   position: absolute;
-  top: 62%;
-  left: 0%;
+  top: 90%;
+  left: 75px;
+  background-color: rgb(126, 123, 121);
   transform: translate(0%, -50%);
 }
 
 .close1:hover {
-  background: #bbb;
+  background: rgb(71, 67, 67);
 }
 
 .num {
@@ -340,21 +360,73 @@ td {
 
 .list {
   position: relative;
-  right: 20%;
+  right: 100%;
 }
 
 .projectTable {
-  width: 150%;
+  position: relative;
+  width: 275px;
   border-radius: 10px;
+  background-color: white;
   color: rgb(0, 0, 0);
+  right: 50px;
+  top: -15px;
 }
 
 .seeMore {
   position: relative;
   top: -200%;
   right: -100%;
-  background-color: #3e8e41;
+  background-color: rgb(126, 123, 121);
 }
 .seeMore:hover {
-  background-color: white;
+  background-color: rgb(71, 67, 67);
+}
+
+.search_div {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  top: 10px;
+}
+.search_class {
+  float: center;
+  background-color: #435c83;
+  width: 300px;
+  height: 44px;
+  border: 2px;
+  border-color: black;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.search_input {
+  all: unset;
+  font: 16px system-ui;
+  color: #fff;
+  height: 100%;
+  width: 100%;
+  padding: 6px 10px;
+}
+
+::placeholder {
+  color: #fff;
+  opacity: 0.7;
+}
+
+svg {
+  color: #fff;
+  fill: currentColor;
+  width: 24px;
+  height: 24px;
+  padding: 10px;
+}
+
+.search_btn {
+  all: unset;
+  cursor: pointer;
+  width: 44px;
+  height: 44px;
 }
