Added the Store name to the top of the page, Added a txt file with the action items we need to finish before the presentation next week.

--- a/CSE-3311 Project/style.css
+++ b/CSE-3311 Project/style.css
@@ -462,3 +462,15 @@ svg {
   width: 44px;
   height: 44px;
 }
+
+.StoreTitle{
+  position: relative;
+  left: 2%;
+  font-size: xx-large;
+  font: 32px system-ui;
+  color: #fefefe;
+  width:fit-content;
+  outline: auto;
+  outline-color: #5d8ffc;
+  background-color: #5d8ffc;
+}
