--- a/CSE-3311 Project/style-form.css
+++ b/CSE-3311 Project/style-form.css
@@ -90,11 +90,8 @@ button {
   transition: 0.3s;
   -webkit-transition: 0.3s;
   -moz-transition: 0.3s;
-<<<<<<< HEAD
-=======
   position: relative;
   left: -10%;
->>>>>>> 69eaca25ba48cf6ad733a89e75514312160f6095
 }
 
 .signup:hover {
@@ -146,15 +143,9 @@ button {
   width: 500px;
 }
 
-<<<<<<< HEAD
-.main > input[type="text"],
-.main > input[type="email"],
-.main > input[type="password"] {
-=======
 input[type="text"],
 input[type="email"],
 input[type="password"] {
->>>>>>> 69eaca25ba48cf6ad733a89e75514312160f6095
   position: relative;
   width: 300px; /* Full width */
   padding: 12px; /* Some padding */
@@ -164,21 +155,17 @@ input[type="password"] {
   margin-top: 6px; /* Add a top margin */
   margin-bottom: 16px; /* Bottom margin */
   resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
-  left: -100px;
+  left: 0px;
 }
 
 .container {
   position: relative;
-  width: 400px;
+  width: 100%;
   top: 20px;
   top: -15px;
-<<<<<<< HEAD
-  left: -20px;
-=======
-  left: 15%;
->>>>>>> 69eaca25ba48cf6ad733a89e75514312160f6095
+  left: -4%;
   border-radius: 5px;
-  background-color: #f2f2f2;
+  background-color: #eee;
   padding: 20px;
 }
 
@@ -193,7 +180,6 @@ input[type="password"] {
   float: right;
   font-size: 28px;
   font-weight: bold;
-<<<<<<< HEAD
 }
 
 /* Hover over the close button */
@@ -210,49 +196,7 @@ input[type="password"] {
   font-size: 50px;
   position: absolute;
   top: -20px;
-  right: 575px;
-  font-family: Arial, sans-serif;
-}
-
-.para {
-  font-family: "Nunito", sans-serif;
-  font-size: 20px;
-  position: absolute;
-  top: 125px;
-}
-
-input[type="text"],
-input[type="email"],
-input[type="password"] {
-  position: relative;
-  width: 300px; /* Full width */
-  padding: 12px; /* Some padding */
-  border: 1px solid #ccc; /* Gray border */
-  border-radius: 4px; /* Rounded borders */
-  box-sizing: border-box; /* Make sure that padding and width stays in place */
-  margin-top: 6px; /* Add a top margin */
-  margin-bottom: 16px; /* Bottom margin */
-  resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
-  left: 100px;
-=======
->>>>>>> 69eaca25ba48cf6ad733a89e75514312160f6095
-}
-
-/* Hover over the close button */
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.heading {
-  /* font-family: "Nunito", sans-serif; */
-  color: #5d8ffc;
-  font-size: 50px;
-  position: absolute;
-  top: -20px;
-  right: 42.5%;
+  right: 30%;
   font-family: Arial, sans-serif;
 }
 
@@ -267,6 +211,6 @@ input[type="password"] {
   font-family: "Nunito", sans-serif;
   font-size: 12px;
   opacity: 0.6;
-  left: -25%;
+  left: 0%;
   position: relative;
 }
