--- a/CSE-3311 Project/style-form.css
+++ b/CSE-3311 Project/style-form.css
@@ -155,7 +155,22 @@ input[type="password"] {
   margin-top: 6px; /* Add a top margin */
   margin-bottom: 16px; /* Bottom margin */
   resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
-  left: 0px;
+  left: 0%;
+}
+
+.main > input[type="text"],
+.main > input[type="email"],
+.main > input[type="password"] {
+  position: relative;
+  width: 300px; /* Full width */
+  padding: 12px; /* Some padding */
+  border: 1px solid #ccc; /* Gray border */
+  border-radius: 4px; /* Rounded borders */
+  box-sizing: border-box; /* Make sure that padding and width stays in place */
+  margin-top: 6px; /* Add a top margin */
+  margin-bottom: 16px; /* Bottom margin */
+  resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
+  left: -100px;
 }
 
 .container {
@@ -196,7 +211,7 @@ input[type="password"] {
   font-size: 50px;
   position: absolute;
   top: -20px;
-  right: 30%;
+  right: 40%;
   font-family: Arial, sans-serif;
 }
 
